Bug 1079280 - Don't transmit email when imap append response is bad. r=Irving,GeneSmith DONTBUILD This only applies to non-literal+ appends. Bad response typically occurs when {size} parameter of append command is larger than server can accept. This prevents TB from sending megabytes of data to a server that has already rejected it.