mailnews/imap/src/nsImapProtocol.cpp
@@ -6194,7 +6194,11 @@ void nsImapProtocol::UploadMessageFromFile (nsIFile* file,
     if (NS_FAILED(rv)) goto done;
 
     if (!useLiteralPlus)
+    {
       ParseIMAPandCheckForNewMail();
+      if (!GetServerStateParser().LastCommandSuccessful())
+        goto done;
+    }
 
     totalSize = fileSize;
     readCount = 0;
